--- a/leLab/leLab/leLab/MainPage.xaml
+++ b/leLab/leLab/leLab/MainPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="leLab.MainPage"
-              BackgroundColor="AliceBlue">
+              BackgroundColor="AliceBlue"
+             Title="Compter">
 
     <StackLayout>
         <StackLayout Spacing="0" Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
